--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,21 @@
-requests
+alabaster==0.7.10
+Babel==2.5.3
+certifi==2018.4.16
+chardet==3.0.4
+docutils==0.14
+greynoise==0.1.0
+idna==2.6
+imagesize==1.0.0
+Jinja2==2.10
+MarkupSafe==1.0
+packaging==17.1
+Pygments==2.2.0
+pyparsing==2.2.0
+pytz==2018.4
+requests==2.18.4
+six==1.11.0
+snowballstemmer==1.2.1
+Sphinx==1.7.4
+sphinx-rtd-theme==0.3.1
+sphinxcontrib-websupport==1.0.1
+urllib3==1.22
