--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,12 +16,17 @@ jobs:
           command: |
             virtualenv venv
             . venv/bin/activate
-            pip install -r requirements_dev.txt
+            pip install -r requirements_dev.txt -e .
       - run:
           name: Static analysis
           command: |
             . venv/bin/activate
             flake8 greynoise
+      - run:
+          name: Test cases
+          command: |
+            . venv/bin/activate
+            pytest tests
 
 
   python3:
@@ -34,9 +39,14 @@ jobs:
           command: |
             python3 -m venv venv
             . venv/bin/activate
-            pip install -r requirements_dev.txt
+            pip install -r requirements_dev.txt -e .
       - run:
           name: Static analysis
           command: |
             . venv/bin/activate
             flake8 greynoise
+      - run:
+          name: Test cases
+          command: |
+            . venv/bin/activate
+            pytest tests
