--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,4 +1,5 @@
 -r requirements.txt
-pytest==5.0.1;python_version>='3'
-pytest==4.6.5;python_version<'3'
 flake8==3.7.8
+mock==3.0.5
+pytest==4.6.5;python_version<'3'
+pytest==5.0.1;python_version>='3'
