--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,12 +16,12 @@ jobs:
           command: |
             virtualenv venv
             . venv/bin/activate
-            pip install -r requirements_dev.txt -e .
+            pip install -r requirements/dev.txt -e .
       - run:
           name: Static analysis
           command: |
             . venv/bin/activate
-            flake8 greynoise
+            flake8 src tests docs
       - run:
           name: Test cases
           command: |
@@ -39,12 +39,12 @@ jobs:
           command: |
             python3 -m venv venv
             . venv/bin/activate
-            pip install -r requirements_dev.txt -e .
+            pip install -r requirements/dev.txt -e .
       - run:
           name: Static analysis
           command: |
             . venv/bin/activate
-            flake8 greynoise
+            flake8 src tests docs
       - run:
           name: Test cases
           command: |
