Use environment variable, not hardcoded token

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -93,4 +93,4 @@ jobs:
             export PATH=$SONAR_SCANNER_HOME/bin:$PATH
             export SONAR_SCANNER_OPTS="-server"
 
-            sonar-scanner
+            sonar-scanner -Dsonar.login=$SONAR_AUTH_TOKEN
