Use pre-commit to manage git hooks in dev environment

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
           command: |
             virtualenv venv
             . venv/bin/activate
-            pip install -r requirements/dev.txt -e .
+            pip install -r requirements/test.txt -e .
       - run:
           name: Static analysis (flake8)
           command: |
