--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,9 @@
 [flake8]
 max-line-length = 88
 max-complexity = 10
+
+[isort]
+multi_line_output = 3
+include_trailing_comma = True
+use_parentheses = True
+line_length = 88
