Ignore python2-only dependendencies in pyup.io
Dependencies that are not in their latest version because python2 is not
supported are marked to be ignored by pyup.io

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,7 @@ jobs:
           command: |
             python3 -m venv venv
             . venv/bin/activate
-            pip install -r requirements/dev.txt -e .
+            pip install -r requirements/test.txt -e .
       - run:
           name: Style check (black)
           command: |
