Use ipython terminal when troubleshooting a problem in pytest

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,3 +7,6 @@ multi_line_output = 3
 include_trailing_comma = True
 use_parentheses = True
 line_length = 88
+
+[tool:pytest]
+addopts = --pdbcls=IPython.terminal.debugger:TerminalPdb
