Add bumpversion to track version numbers

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,20 @@
+[bumpversion]
+current_version = 0.2.0
+tag = True
+commit = True
+
+[bumpversion:file:setup.py]
+search = version="{current_version}"
+replace = version="{new_version}"
+
+[bumpversion:file:src/greynoise/api.py]
+search = CLIENT_VERSION = "{current_version}"
+replace = CLIENT_VERSION = "{new_version}"
+
+[bumpversion:file:docs/source/conf.py]
+search = release = "{current_version}"
+replace = release = "{new_version}"
+
 [flake8]
 max-line-length = 88
 max-complexity = 10
@@ -10,3 +27,4 @@ line_length = 88
 
 [tool:pytest]
 addopts = --pdbcls=IPython.terminal.debugger:TerminalPdb
+
