--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,21 +27,19 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Install dependencies
+          name: Create virtualenv
           command: |
             virtualenv venv
-            . venv/bin/activate
-            pip install -r requirements/test.txt -e .
+            echo ". venv/bin/activate" >> $BASH_ENV
+      - run:
+          name: Install dependencies
+          command: pip install -r requirements/test.txt -e .
       - run:
           name: Static analysis (flake8)
-          command: |
-            . venv/bin/activate
-            flake8 setup.py src tests docs
+          command: flake8 setup.py src tests docs
       - run:
           name: Test cases
-          command: |
-            . venv/bin/activate
-            pytest --junitxml=workspace/test_results/pytest.xml tests
+          command: pytest --junitxml=workspace/test_results/pytest.xml tests
       - store_test_results:
           path: workspace/test_results
 
@@ -52,37 +50,30 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Install dependencies
+          name: Create virtualenv
           command: |
             python3 -m venv venv
-            . venv/bin/activate
-            pip install -r requirements/test.txt -e .
+            echo ". venv/bin/activate" >> $BASH_ENV
+      - run:
+          name: Install dependencies
+          command: pip install -r requirements/test.txt -e .
       - run:
           name: Style check (black)
-          command: |
-            . venv/bin/activate
-            black --check setup.py src tests docs
+          command: black --check setup.py src tests docs
       - run:
           name: Style check (isort)
-          command: |
-            . venv/bin/activate
-            isort --check-only setup.py src/**/*.py tests/**/*.py docs/**/*.py
+          command: isort --check-only setup.py src/**/*.py tests/**/*.py docs/**/*.py
       - run:
           name: Static analysis (flake8)
-          command: |
-            . venv/bin/activate
-            flake8 setup.py src tests docs
+          command: flake8 setup.py src tests docs
       - run:
           name: Static analysis (pylint)
           command: |
-            . venv/bin/activate
             mkdir workspace
             pylint --exit-zero -r n --msg-template='{path}:{line}: [{msg_id}({symbol}), {obj}] {msg}' setup.py src > workspace/pylint.txt
       - run:
           name: Test cases
-          command: |
-            . venv/bin/activate
-            pytest --cov=greynoise --cov-report=xml:workspace/coverage/report.xml --junitxml=workspace/test_results/pytest.xml tests
+          command: pytest --cov=greynoise --cov-report=xml:workspace/coverage/report.xml --junitxml=workspace/test_results/pytest.xml tests
       - persist_to_workspace:
           root: workspace
           paths:
@@ -120,17 +111,16 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Install dependencies
+          name: Create virtualenv
           command: |
-            . venv/bin/activate
-            pip install -r requirements/test.txt -e .
+            virtualenv venv
+            echo ". venv/bin/activate" >> $BASH_ENV
+      - run:
+          name: Install dependencies
+          command: pip install -r requirements/test.txt -e .
       - run:
           name: Build packages
-          command: |
-            . venv/bin/activate
-            python3 setup.py sdist bdist_wheel
+          command: python3 setup.py sdist bdist_wheel
       - run:
           name: Upload package to pypi
-          command: |
-            . venv/bin/activate
-            twine upload --username __token__ --disable-progress-bar dist/*
+          command: twine upload --username __token__ --disable-progress-bar dist/*
