Split sonarcloud job into multiple steps

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,18 +91,23 @@ jobs:
       - attach_workspace:
           at: workspace
       - run:
-          name: Sonar scanner
+          name: Setup environment variables
           command: |
-            SONAR_SCANNER_VERSION=3.3.0.1492
-            export SONAR_SCANNER_HOME=$HOME/.sonar/sonar-scanner-$SONAR_SCANNER_VERSION
+            echo "SONAR_SCANNER_VERSION=3.3.0.1492" >> $BASH_ENV
+            echo 'SONAR_SCANNER_HOME=$HOME/.sonar/sonar-scanner-$SONAR_SCANNER_VERSION' >> $BASH_ENV
+      - run:
+          name: Install sonar scanner
+          command: |
             rm -rf $SONAR_SCANNER_HOME
             mkdir -p $SONAR_SCANNER_HOME
             curl -sSLo $HOME/.sonar/sonar-scanner.zip http://repo1.maven.org/maven2/org/sonarsource/scanner/cli/sonar-scanner-cli/$SONAR_SCANNER_VERSION/sonar-scanner-cli-$SONAR_SCANNER_VERSION.zip
             unzip $HOME/.sonar/sonar-scanner.zip -d $HOME/.sonar/
             rm $HOME/.sonar/sonar-scanner.zip
+      - run:
+          name: Run sonar scanner
+          command: |
             export PATH=$SONAR_SCANNER_HOME/bin:$PATH
             export SONAR_SCANNER_OPTS="-server"
-
             sonar-scanner -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.branch.name=$CIRCLE_BRANCH
 
   deploy:
