Update changelog release date with bumpversion

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,10 @@ replace = CLIENT_VERSION = "{new_version}"
 search = release = "{current_version}"
 replace = release = "{new_version}"
 
+[bumpversion:file:CHANGELOG.rst]
+search = **Date**: unreleased
+replace = **Date**: {now:%B %d, %Y}
+
 [flake8]
 max-line-length = 88
 max-complexity = 10
