--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,9 @@
 [tox]
 envlist = py27, py35, py36, py37
 
+[testenv:py27]
+commands = pytest tests
+
 [testenv]
 deps =
     -r{toxinidir}/requirements/test.txt
