--- a/.editorconfig
+++ b/.editorconfig
@@ -6,7 +6,7 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[{*.py,*.rst}]
+[{*.py,*.rst,tox.ini}]
 indent_style = space
 indent_size = 4
 
