Move version to __version__ module
Also, move there all the metadata variables in greynoise/__init__.py

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -7,9 +7,9 @@ commit = True
 search = version="{current_version}"
 replace = version="{new_version}"
 
-[bumpversion:file:src/greynoise/api.py]
-search = CLIENT_VERSION = "{current_version}"
-replace = CLIENT_VERSION = "{new_version}"
+[bumpversion:file:src/greynoise/__version__.py]
+search = __version__ = "{current_version}"
+replace = __version__ = "{new_version}"
 
 [bumpversion:file:docs/source/conf.py]
 search = release = "{current_version}"
