Apply multiple version replacements in CHANGELOG

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -15,7 +15,14 @@ replace = __version__ = "{new_version}"
 search = release = "{current_version}"
 replace = release = "{new_version}"
 
-[bumpversion:file:CHANGELOG.rst]
+[bumpversion:file:CHANGELOG.rst:date]
 search = **Date**: unreleased
 replace = **Date**: {now:%B %d, %Y}
 
+[bumpversion:file:CHANGELOG.rst:version]
+search = `dev`
+replace = `{new_version}`
+
+[bumpversion:file:CHANGELOG.rst:version_range]
+search = {current_version}...HEAD
+replace = {current_version}...{new_version}
