--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -15,15 +15,15 @@ replace = __version__ = "{new_version}"
 search = release = "{current_version}"
 replace = release = "{new_version}"
 
-[bumpversion:file:CHANGELOG.rst(date)]
+[bumpversion:file:CHANGELOG.rst:date]
 search = **Date**: unreleased
 replace = **Date**: {now:%B %d, %Y}
 
-[bumpversion:file:CHANGELOG.rst:(version)]
+[bumpversion:file:CHANGELOG.rst:version]
 search = `dev`
 replace = `{new_version}`
 
-[bumpversion:file:CHANGELOG.rst:(version_range)]
+[bumpversion:file:CHANGELOG.rst:version_range]
 search = {current_version}...HEAD
 replace = {current_version}...{new_version}
 
