--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,7 +1,7 @@
 [bumpversion]
-current_version = 1.0.0
-tag = True
-commit = True
+current_version = 1.1.0
+tag = False
+commit = False
 
 [bumpversion:file:setup.py]
 search = version="{current_version}"
