--- a/.github/workflows/slack_release_notice.yml
+++ b/.github/workflows/slack_release_notice.yml
@@ -25,7 +25,7 @@ jobs:
                 "type": "header",
                 "text": {
                   "type": "plain_text",
-                  "text": "${{ github.event.release.tag_name}} is published!"
+                  "text": "GreyNoise SDK ${{ github.event.release.tag_name}} is published!"
                 }
               },
               {
