update dependabot target

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,5 +8,6 @@ version: 2
 updates:
   - package-ecosystem: "pip"  # See documentation for possible values
     directory: "/requirements/"  # Location of package manifests
+    target-branch: next-release
     schedule:
       interval: "weekly"
