--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,12 +9,6 @@ workflows:
   version: 2
   build:
     jobs:
-      - py36:
-          filters:
-            <<: *TAGS_FILTER
-      - py37:
-          filters:
-            <<: *TAGS_FILTER
       - py38:
           filters:
             <<: *TAGS_FILTER
@@ -24,19 +18,25 @@ workflows:
       - py310:
           filters:
             <<: *TAGS_FILTER
+      - py311:
+          filters:
+            <<: *TAGS_FILTER
+      - py312:
+          filters:
+            <<: *TAGS_FILTER
       - sonarcloud:
           requires:
             # generate static analysis and coverage reports in py37 job
             # and upload them to sonarcloud.io in sonarcloud job
-            - py37
+            - py39
       - pypi:
           requires:
             # release to pypi only when test cases pass in all python versions
-            - py36
-            - py37
             - py38
             - py39
             - py310
+            - py311
+            - py312
           filters:
             <<: *TAGS_FILTER
             branches:
@@ -61,14 +61,9 @@ DEFAULT_STEPS: &DEFAULT_STEPS
       path: workspace/test_results
 
 jobs:
-  py36:
+  py310:
     docker:
-      - image: cimg/python:3.6
-    steps: *DEFAULT_STEPS
-
-  py37:
-    docker:
-      - image: cimg/python:3.7
+      - image: cimg/python:3.10
     steps:
       - checkout
       - run: *CREATE_VIRTUALENV_STEP
@@ -78,16 +73,16 @@ jobs:
           command: yamllint .
       - run:
           name: Style check (black)
-          command: black --check setup.py src tests docs
+          command: black --check src tests docs
       - run:
           name: Style check (isort)
-          command: isort --check-only setup.py src/**/*.py tests/**/*.py docs/**/*.py
+          command: isort --check-only src/**/*.py tests/**/*.py docs/**/*.py
       - run:
           name: Style check (rst)
           command: rst-lint *.rst
       - run:
           name: Static analysis (flake8)
-          command: flake8 setup.py src tests docs
+          command: flake8 src tests docs
       - run:
           name: Static analysis (pylint)
           command: |
@@ -96,7 +91,7 @@ jobs:
               --exit-zero \
               --reports no \
               --msg-template='{path}:{line}: [{msg_id}({symbol}), {obj}] {msg}' \
-              setup.py src > workspace/pylint.txt
+              src > workspace/pylint.txt
       - run:
           name: Test cases
           command: |
@@ -125,9 +120,14 @@ jobs:
       - image: cimg/python:3.9
     steps: *DEFAULT_STEPS
 
-  py310:
+  py311:
     docker:
-      - image: cimg/python:3.10
+      - image: cimg/python:3.11
+    steps: *DEFAULT_STEPS
+
+  py312:
+    docker:
+      - image: cimg/python:3.12
     steps: *DEFAULT_STEPS
 
   sonarcloud:
@@ -166,14 +166,23 @@ jobs:
 
   pypi:
     docker:
-      - image: cimg/python:3.7
+      - image: cimg/python:3.10
     steps:
       - checkout
       - run: *CREATE_VIRTUALENV_STEP
       - run: *INSTALL_DEPENDENCIES_STEP
       - run:
+          name: Install build dependencies
+          command: |
+            . venv/bin/activate
+            pip install build twine
+      - run:
           name: Build packages
-          command: python3 setup.py sdist bdist_wheel
+          command: |
+            . venv/bin/activate
+            python -m build
       - run:
           name: Upload package to pypi
-          command: twine upload --username __token__ --disable-progress-bar dist/*
+          command: |
+            . venv/bin/activate
+            twine upload --username __token__ --disable-progress-bar dist/*
