--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,11 +1,16 @@
 ---
 version: 2
+
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.12"
+
 sphinx:
   builder: html
   configuration: docs/source/conf.py
 
 python:
-  version: 3.7
   install:
     - requirements: requirements/docs.txt
     - method: pip
